--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="balance pull-right">
         Account balance
         <i class="fa fa-angle-right"></i>
-        {{ budget }}$
+        {{ user.budget }}$
           
     </div>
   </nav>
